--- a/myapp/angular.json
+++ b/myapp/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "eeff4cc4-7b35-4899-9efc-02736f11acc2"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
